[gd_scene load_steps=4 format=3 uid="uid://bc4wb1vnqogxd"]

[ext_resource type="FontData" uid="uid://bbd3apnyfil6q" path="res://global/fonts/raw/Roboto-Regular.ttf" id="1_6knx6"]
[ext_resource type="Script" path="res://simple_edit/simple_edit.gd" id="1_hsx63"]

[sub_resource type="Font" id="Font_oqfbc"]
data/0 = ExtResource( "1_6knx6" )

[node name="SimpleEdit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( "1_hsx63" )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
mouse_filter = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="NameEdit" type="LineEdit" parent="VBoxContainer"]
minimum_size = Vector2(300, 0)
offset_right = 300.0
offset_bottom = 32.0
theme_override_fonts/font = SubResource( "Font_oqfbc" )
theme_override_font_sizes/font_size = 20
placeholder_text = "[BACKGROUND]"

[node name="ColorSelections" type="HBoxContainer" parent="VBoxContainer"]
offset_left = 304.0
offset_right = 1900.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="ColorPicker" type="ColorPicker" parent="."]
visible = false
offset_left = 40.0
offset_top = 75.0
offset_right = 352.0
offset_bottom = 540.0
picker_shape = 2
presets_visible = false

[connection signal="focus_entered" from="VBoxContainer/NameEdit" to="." method="_on_name_edit_focus_entered"]
[connection signal="text_changed" from="VBoxContainer/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="color_changed" from="ColorPicker" to="." method="_on_color_picker_color_changed"]
